--- a/dataclean.ipynb
+++ b/dataclean.ipynb
@@ -504,8 +504,20 @@
     "# Create a cursor\n",
     "cursor = conn.cursor()\n",
     "\n",
-    "# Example 1: Execute any query"
+    "# Execute any query"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
