updates to notebook

--- a/dataclean.ipynb
+++ b/dataclean.ipynb
@@ -504,7 +504,7 @@
     "# Create a cursor\n",
     "cursor = conn.cursor()\n",
     "\n",
-    "# Execute any query"
+    "# Execute any queryy"
    ]
   },
   {
