--- a/data-clean.ipynb
+++ b/data-clean.ipynb
@@ -28,38 +28,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total rows retrieved: 60000\n"
+     ]
+    }
+   ],
    "source": [
-    "# import requests\n",
-    "# import pandas as pd\n",
-    "# import json \n",
+    "import requests\n",
+    "import pandas as pd\n",
+    "import json \n",
     "\n",
-    "# url = \"https://data.cityofchicago.org/resource/9hwr-2zxp.json\"\n",
-    "# total_rows = 60000\n",
-    "# chunk_size = 1000\n",
-    "# offset = 0\n",
-    "# dataframes = []\n",
+    "url = \"https://data.cityofchicago.org/resource/9hwr-2zxp.json\"\n",
+    "total_rows = 60000\n",
+    "chunk_size = 1000\n",
+    "offset = 0\n",
+    "dataframes = []\n",
     "\n",
-    "# while offset < total_rows:\n",
-    "#     params = {'$limit': chunk_size, '$offset': offset}\n",
-    "#     response = requests.get(url, params=params)\n",
+    "while offset < total_rows:\n",
+    "    params = {'$limit': chunk_size, '$offset': offset}\n",
+    "    response = requests.get(url, params=params)\n",
     "\n",
-    "#     if response.status_code == 200:\n",
-    "#         data = response.json()\n",
-    "#         if len(data) == 0:  \n",
-    "#             break\n",
-    "#         df = pd.DataFrame(data)\n",
-    "#         dataframes.append(df)\n",
-    "#         offset += chunk_size\n",
-    "#     else:\n",
-    "#         print(\"Failed to retrieve data. Status code:\", response.status_code)\n",
-    "#         break\n",
+    "    if response.status_code == 200:\n",
+    "        data = response.json()\n",
+    "        if len(data) == 0:  \n",
+    "            break\n",
+    "        df = pd.DataFrame(data)\n",
+    "        dataframes.append(df)\n",
+    "        offset += chunk_size\n",
+    "    else:\n",
+    "        print(\"Failed to retrieve data. Status code:\", response.status_code)\n",
+    "        break\n",
     "\n",
-    "# final_df = pd.concat(dataframes, ignore_index=True)\n",
+    "final_df = pd.concat(dataframes, ignore_index=True)\n",
     "\n",
-    "# print(\"Total rows retrieved:\", len(final_df))"
+    "print(\"Total rows retrieved:\", len(final_df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum Date: 2022-10-06 08:00:00\n",
+      "Maximum Date: 2022-12-31 23:59:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "final_df['date'] = pd.to_datetime(final_df['date'])\n",
+    "\n",
+    "min_date = final_df['date'].min()\n",
+    "max_date = final_df['date'].max()\n",
+    "\n",
+    "print(\"Minimum Date:\", min_date)\n",
+    "print(\"Maximum Date:\", max_date)"
    ]
   },
   {
