--- a/eda.ipynb
+++ b/eda.ipynb
@@ -472,16 +472,12 @@
    "source": [
     "import geopandas as gpd\n",
     "\n",
-    "# Load the neighborhood boundaries data (assuming it's in a GeoJSON file)\n",
     "neighborhoods = gpd.read_file('boundries-chicago.geojson')\n",
     "\n",
     "property_df['geometry'] = gpd.points_from_xy(property_df['longitude'], property_df['latitude'])\n",
     "property_df = gpd.GeoDataFrame(property_df, geometry='geometry', crs='EPSG:4326')\n",
     "\n",
-    "# Perform a spatial join\n",
-    "properties_with_neighborhood = gpd.sjoin(property_df, neighborhoods, op='within')\n",
-    "\n",
-    "# Now, properties_with_neighborhood DataFrame will have a new column indicating the neighborhood\n"
+    "properties_with_neighborhood = gpd.sjoin(property_df, neighborhoods, op='within')"
    ]
   },
   {
