ready to import db

--- a/Israel/EDA.ipynb
+++ b/Israel/EDA.ipynb
@@ -7,9 +7,21 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import sqlite3\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.ticker import FuncFormatter\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "database_file = ''\n",
+    "connection = sqlite3.connect(database_file)\n",
+    "query = \"SELECT * FROM your_table;\""
    ]
   },
   {
@@ -415,6 +427,13 @@
     "# Show the plot\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
