--- a/Israel/Data Collection Notebooks/Crime_data_collecton.ipynb
+++ b/Israel/Data Collection Notebooks/Crime_data_collecton.ipynb
@@ -6,14 +6,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'requests'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrequests\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      4\u001b[0m url \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://data.cityofchicago.org/resource/9hwr-2zxp.json\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'requests'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total rows retrieved: 60000\n"
      ]
     }
    ],
@@ -112,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
