--- a/Israel/Visualization and Models.ipynb
+++ b/Israel/Visualization and Models.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "database_file = 'C:\\Data Science\\data\\chicago-crime-property-analysis\\chicago-crime-property-analysis\\Israel\\data\\chicago-crime-property.db'\n",
+    "database_file = 'C:\\Data Science\\chicago-crime-property-analysis\\Israel\\data\\chicago-crime-property.db'\n",
     "connection = sqlite3.connect(database_file)\n",
     "cursor = connection.cursor()\n",
     "\n",
