--- a/Israel/app/explore.ipynb
+++ b/Israel/app/explore.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -184,13 +184,98 @@
        "[77 rows x 2 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "neighborhood_select"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   Neighborhood  bool\n",
+      "0      neighborhood_ALBANY PARK     0\n",
+      "1   neighborhood_ARCHER HEIGHTS     1\n",
+      "2    neighborhood_ARMOUR SQUARE     0\n",
+      "3          neighborhood_ASHBURN     0\n",
+      "4   neighborhood_AUBURN GRESHAM     0\n",
+      "..                          ...   ...\n",
+      "72       neighborhood_WEST LAWN     0\n",
+      "73    neighborhood_WEST PULLMAN     0\n",
+      "74      neighborhood_WEST RIDGE     0\n",
+      "75       neighborhood_WEST TOWN     0\n",
+      "76        neighborhood_WOODLAWN     0\n",
+      "\n",
+      "[77 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "val5 = 'neighborhood_ARCHER HEIGHTS'\n",
+    "chosen_neighborhood = val5\n",
+    "neighborhood_select['bool'] = (neighborhood_select['Neighborhood'] == chosen_neighborhood).astype(int)\n",
+    "\n",
+    "print(neighborhood_select)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           YearBuilt  bool\n",
+      "0    year_built_1615     0\n",
+      "1    year_built_1810     0\n",
+      "2    year_built_1818     1\n",
+      "3    year_built_1819     0\n",
+      "4    year_built_1820     0\n",
+      "..               ...   ...\n",
+      "180  year_built_2019     0\n",
+      "181  year_built_2020     0\n",
+      "182  year_built_2021     0\n",
+      "183  year_built_2022     0\n",
+      "184  year_built_2023     0\n",
+      "\n",
+      "[185 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "year_built_file_path = r'C:\\Data Science\\chicago-crime-property-analysis\\Israel\\app\\year_built.txt'\n",
+    "\n",
+    "# Read the year built data\n",
+    "year_built_data = pd.read_csv(year_built_file_path, header=None)\n",
+    "year_built_data = year_built_data.rename(columns={0: 'YearBuilt'})\n",
+    "year_built_data = year_built_data.drop(columns=1)\n",
+    "\n",
+    "# Create the year_built_select dataframe\n",
+    "year_built_select = pd.DataFrame({\n",
+    "    'YearBuilt': year_built_data['YearBuilt'],\n",
+    "    'bool': 0\n",
+    "})\n",
+    "\n",
+    "# Get user input for Year Built\n",
+    "val3 = 'year_built_1818'\n",
+    "\n",
+    "# Set the 'bool' value for the selected Year Built and 0 for the rest\n",
+    "chosen_year_built = val3\n",
+    "year_built_select['bool'] = (year_built_select['YearBuilt'] == chosen_year_built).astype(int)\n",
+    "\n",
+    "# Print the resulting dataframe\n",
+    "print(year_built_select)"
    ]
   }
  ],
